# for display continuity sake please use 2 spaces instead of tabs

2014-04-06 mmichaud <m.michael.michaud@orange.fr>
  * Fix bug #320 : mouse drag in the layerNamePanel could sometimes
    break the application (inconsistency between layerManager, categories
    and layerName panel).

2014-04-05 mmichaud <m.michael.michaud@orange.fr>
  * Fix a bug happening with transaction manager and cloned windows

2014-03-30 mmichaud <m.michael.michaud@orange.fr>
  * Fix bug #355 happening on project containing file-based and
    datastore-based layers (reported by Bernd Wehle on 2014-03-24)

2014-03-30 mmichaud <m.michael.michaud@orange.fr>
  * New option to customize date display in attribute panel
  * Display an icon for null values in attribute panel

2014-03-09 ede
  * beautify the logo splash
    jre 1.7+ - with transparency
    older jre - light gradient to the lnf's default background color

2014-03-02 ede
  * add RAM size detection to mac/linux start scripts
    - uses either 80% or size-1GiB, whichever is bigger
    - uses max. 3GiB for 32bit jre's

2014-02-28 Matthias Scholz <ms@jammerhund.de>
  * SaveLegendPlugIn now prints the word "Project" in front of the projectname
    in the rootnode and is correct left aligned.

2014-01-25 mmichaud <m.michael.michaud@orange.fr>
  * Fixed a bug #354 : OpenRecentPlugIn broken.

2014-01-15 mentaer <sstein@geo.uzh.ch>
  * New analysis tool (CalculateDistancesPlugIn) to calculate distances between 
    two sets of geometries. Calculates shortest distance, centroid distance and 
    Hausforff distance.
    
2014-01-06 mmichaud <m.michael.michaud@orange.fr>
  * fix a regression in GeometryFunctionPlugIn (non editable layer throws NPE)

2014-01-06 Matthias Scholz <ms@jammerhund.de>
  * Enhancement of the AbstractCursorTool for XOR painting Image's as visual
    indicator too. One usecase is the SuperZoomPanTool. If you use the wheel in
    this tool for zooming you get more information as it was possible with a
    simple shape.
